# agentforge

./: .gitignore  README.md  pyproject.toml  technical.md
configs/: gemma4-12b-qlora.yaml  smoke-cpu-tiny.yaml
scripts/: build_data.sh  dev_eval.sh  merge_and_eval.sh  publish_hf.sh  run_bfcl.sh  train.sh
scripts/aws/: bootstrap_and_train.sh  launch_instance.sh
src/agentforge/: config.py  infer.py  merge_adapter.py  model_utils.py  publish_hf.py  train.py
src/agentforge/data/: build_manifest.py  mix.py  react_parsing.py  schema.py
src/agentforge/data/normalizers/: agent_flan.py  base.py  glaive.py  hermes.py  toolace.py  xlam.py
src/agentforge/eval/: bfcl_runner.py  dev_eval.py  holdout_manifest.py  tau2_runner.py  tool_call_parsers.py
tests/: test_config.py  test_model_utils.py  test_publish_hf.py  test_train_smoke.py
tests/data/: test_build_manifest.py  test_mix.py  test_normalizer_agent_flan.py  test_normalizer_glaive.py  test_normalizer_hermes.py  test_normalizer_toolace.py  test_normalizer_xlam.py  test_schema.py
tests/eval/: test_bfcl_runner.py  test_dev_eval_scorer.py  test_holdout_manifest.py  test_tau2_runner.py  test_tool_call_parsers.py
