[project]
name = "agentforge"
version = "0.1.0"
description = "Instruction-tuning google/gemma-4-12B-it for multi-turn agentic tool-call reliability via LoRA/QLoRA."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "Aurorium" }
]

dependencies = [
  "torch>=2.4",
  "transformers>=5.14",
  "trl>=1.9",
  "peft>=0.19",
  "bitsandbytes>=0.47",
  "accelerate>=1.5",
  "datasets>=3.2",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "sentencepiece",
  "protobuf",
  "huggingface-hub>=0.24.0",
]

[project.optional-dependencies]
eval = [
  "bfcl-eval",
  "vllm>=0.7",
]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: tests that load a real (even if tiny) model, skip in fast local loops",
  "integration: tests that hit the network / real HF datasets, excluded from default runs",
]
addopts = "-m 'not slow and not integration'"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Test files legitimately need long literal strings/fixtures/assertions
# where wrapping would hurt readability more than it helps.
"tests/**" = ["E501"]
